@@ -1,0 +1,44 @@
+# frozen_string_literal: true
+
+require 'spec_helper'
+
+RSpec.describe Kiba::Extend::Transforms::Explode::ArrayFromMultivalField do
+  let(:accumulator){ [] }
+  let(:test_job){ Helpers::TestJob.new(input: input, accumulator: accumulator, transforms: transforms) }
+  let(:result){ test_job.accumulator }
+
+  let(:input) do
+    [
+      {r1: 'a;b', r2: 'foo;bar'}
+    ]
+  end
+  
+  let(:transforms) do
+    Kiba.job_segment do
+      transform Explode::ArrayFromMultivalField, field: :r1, delim: ';'
+    end
+  end
+  
+  let(:expected) do
+    [
+      { r1: ['a','b'], r2: 'foo;bar' }
+    ]
+  end
+
+  it 'transforms as expected' do
+    expect(result).to eq(expected)
+  end
+
+  context 'when delim not given' do
+    let(:transforms) do
+      Kiba.job_segment do
+        transform Explode::ArrayFromMultivalField, field: :r1
+      end
+    end
+
+    it 'uses Kiba::Extend.delim value' do
+      Kiba::Extend.config.delim = ';'
+      expect(result).to eq(expected)
+    end
+  end
+end
